--- a/src/assets/sass/components/making-order/making-order.scss
+++ b/src/assets/sass/components/making-order/making-order.scss
@@ -15,6 +15,8 @@
 
         @media (max-width: $maxMobWidth) {
             display: flex;
+            flex-direction: column;
+            align-items: center;
 
             .basket__list {
                 display: none;
@@ -189,6 +191,7 @@
             @media (max-width: $maxMobWidth) {
                 min-width: 344px;
                 max-width: 743px;
+                width: 100%;
                 resize: none;
             }
         }
