--- a/src/assets/sass/components/thanks-for-order/thanks-for-order.scss
+++ b/src/assets/sass/components/thanks-for-order/thanks-for-order.scss
@@ -3,9 +3,19 @@
     margin: 0 auto;
     margin-bottom: 48px;
 
+    @media (max-width: $maxMobWidth) {
+        margin-bottom: 60px;
+    }
+
     &__list {
         display: flex;
         justify-content: space-between;
+
+        @media (max-width: $maxMobWidth) {
+            flex-direction: column;
+            align-items: center;
+            gap: 32px;
+        }
     }
 
     &__item {
@@ -15,6 +25,10 @@
         line-height: 140%;
         text-align: center;
 
+        @media (max-width: $maxMobWidth) {
+            font-size: 12px;
+        }
+
         &:nth-child(1) {
             background: url('../assets/img/thanks-for-order/phone.svg') no-repeat top center;
         }
@@ -22,6 +36,10 @@
         &:nth-child(2) {
             margin-left: -72px;
             background: url('../assets/img/thanks-for-order/computer.svg') no-repeat top center;
+
+            @media (max-width: $maxMobWidth) {
+                margin: 0;
+            }
         }
 
         &:nth-child(3) {
