--- a/src/assets/sass/components/training/training.scss
+++ b/src/assets/sass/components/training/training.scss
@@ -3,10 +3,53 @@
     margin: 0 auto;
     margin-bottom: 120px;
 
+    @media (max-width: $maxMobWidth) {
+        margin-bottom: 80px;
+    }
+
     &__wrapper {
         display: grid;
         grid-template-columns: 328px 1fr;
         gap: 32px;
+
+        @media (max-width: $maxMobWidth) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+
+    &__left-col {
+        @media (max-width: $maxMobWidth) {
+            position: absolute;
+            z-index: 100;
+            top: 0;
+            left: 0;
+            right: 0;
+            display: none;
+            max-width: none;
+            padding: 16px;
+            padding-top: 73px;
+            padding-bottom: 26px;
+            background-color: #FFFFFF;
+
+            &--active {
+                display: block;
+
+                .category__menu-btns {
+                    display: flex;
+                }
+            }
+        }
+    }
+
+    &__title-wrapper {
+        position: relative;
+
+        .category__menu-btn {
+            top: 0;
+            bottom: auto;
+        }
     }
 
     &__categories,
@@ -21,6 +64,22 @@
         padding: 16px 0;
         border-bottom: 1px solid #E9E9E9;
 
+        @media (max-width: $maxMobWidth) {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+            padding-bottom: 80px;
+
+            .basket__buy {
+                position: absolute;
+                bottom: 16px;
+                width: 100%;
+                margin: 0;
+                padding: 16px;
+            }
+        }
+
         ul,
         li {
             list-style-type: disc;
@@ -30,6 +89,13 @@
             padding-left: 20px;
         }
     }
+
+    @media (max-width: $maxMobWidth) {
+        .results__pagination {
+            display: none;
+        }
+    }
+
 }
 
 .training-categories {
@@ -72,6 +138,12 @@
 
     &__img {
         margin-bottom: -8px;
+
+        @media (max-width: $maxMobWidth) {
+            width: 344px;
+            height: 240px;
+            object-fit: cover;
+        }
     }
 
     &__name {
@@ -80,11 +152,21 @@
         line-height: 140%;
         color: #000000;
         text-decoration: none;
+
+        @media (max-width: $maxMobWidth) {
+            font-weight: 500;
+            font-size: 14px;
+        }
     }
 
     &__price-city {
         display: grid;
         grid-template-columns: 1fr 1fr;
+
+        @media (max-width: $maxMobWidth) {
+            display: flex;
+            flex-direction: column;
+        }
     }
 
     &__text {
@@ -97,6 +179,10 @@
         font-weight: 300;
         font-size: 14px;
         line-height: 140%;
+
+        @media (max-width: $maxMobWidth) {
+            font-size: 12px;
+        }
     }
 }
 
