--- a/src/assets/sass/components/blog/blog.scss
+++ b/src/assets/sass/components/blog/blog.scss
@@ -2,4 +2,8 @@
     max-width: 1408px;
     margin: 0 auto;
     margin-bottom: 120px;
+
+    @media (max-width: $maxMobWidth) {
+        margin-bottom: 80px;
+    }
 }
