--- a/src/assets/sass/components/page404/page404.scss
+++ b/src/assets/sass/components/page404/page404.scss
@@ -6,11 +6,20 @@
     margin: 0 auto;
     margin-bottom: 80px;
 
+    @media (max-width: $maxMobWidth) {
+        flex-direction: column;
+    }
+
     &__code {
         margin-right: 28px;
         font-weight: 200;
         font-size: 150px;
         line-height: 130%;
+
+        @media (max-width: $maxMobWidth) {
+            font-size: 100px;
+            margin: 0;
+        }
     }
 
     &__title {
@@ -18,5 +27,10 @@
         font-weight: 300;
         font-size: 24px;
         line-height: 40px;
+
+        @media (max-width: $maxMobWidth) {
+            font-size: 24px;
+            line-height: 40px;
+        }
     }
 }
