--- a/src/assets/sass/components/webinar/webinar-main.scss
+++ b/src/assets/sass/components/webinar/webinar-main.scss
@@ -7,6 +7,11 @@
     max-width: 1654px;
     margin-bottom: 120px;
 
+    @media (max-width: $maxMobWidth) {
+        margin-bottom: 80px;
+        gap: 16px;
+    }
+
     &__pink {
         display: grid;
         gap: 32px;
@@ -15,6 +20,15 @@
         padding-bottom: 32px;
         padding-left: 246px;
         background-color: #FFF1F4;
+
+        @media (max-width: $maxMobWidth) {
+            order: 0;
+            display: flex;
+            flex-direction: column;
+            gap: 24px;
+            min-width: 100%;
+            padding: 16px;
+        }
     }
 
     &__title {
@@ -23,12 +37,23 @@
         font-weight: 400;
         font-size: 32px;
         line-height: 37px;
+
+        @media (max-width: $maxMobWidth) {
+            font-size: 24px;
+            line-height: 28px;
+        }
     }
 
     &__descr {
         font-weight: 600;
         font-size: 14px;
         line-height: 17px;
+
+        @media (max-width: $maxMobWidth) {
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 15px;
+        }
     }
 
     &__list {
@@ -37,6 +62,13 @@
         row-gap: 32px;
         column-gap: 84px;
         margin-top: 8px;
+
+        @media (max-width: $maxMobWidth) {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 32px;
+            margin: 0;
+        }
     }
 
     &__item {
@@ -45,6 +77,15 @@
         font-weight: 300;
         font-size: 14px;
         line-height: 140%;
+
+        @media (max-width: $maxMobWidth) {
+            display: flex;
+            align-items: center;
+            max-width: 135px;
+            min-height: 40px;
+            padding-left: 56px;
+            font-size: 12px;
+        }
     }
 
     &__decorative {
@@ -60,6 +101,21 @@
             position: absolute;
             top: -60px;
             left: 87px;
+
+            @media (max-width: $maxMobWidth) {
+                top: -32px;
+                left: auto;
+                right: 14px;
+            }
+        }
+
+        @media (max-width: $maxMobWidth) {
+            position: relative;
+            order: 1;
+            width: 100%;
+            height: 278px;
+            margin-top: 32px;
+            background-size: 317px 289px;
         }
     }
 
@@ -69,6 +125,12 @@
         align-items: flex-start;
         min-width: 1174px;
         padding-left: 246px;
+
+        @media (max-width: $maxMobWidth) {
+            min-width: 100%;
+            padding: 0;
+            order: 2;
+        }
     }
 
     &__price {
@@ -79,10 +141,20 @@
         font-size: 36px;
         line-height: 42px;
 
+        @media (max-width: $maxMobWidth) {
+            margin: 16px 0;
+            font-size: 24px;
+            line-height: 28px;
+        }
+
         span {
             margin-left: 24px;
             font-size: 48px;
             line-height: 56px;
+
+            @media (max-width: $maxMobWidth) {
+                margin-left: 16px;
+            }
         }
     }
 
@@ -90,6 +162,13 @@
         display: grid;
         grid-template-columns: 328px 328px;
         gap: 32px;
+
+        @media (max-width: $maxMobWidth) {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            width: 100%;
+        }
     }
 
     &__enroll {
@@ -103,5 +182,13 @@
         margin: 0;
         text-decoration: none;
         color: #000000;
+    }
+}
+
+.webinar__title {
+    display: none;
+
+    @media (max-width: $maxMobWidth) {
+        display: block;
     }
 }
